<resources>

    Main Menu Strings
    <string name="app_name">App Dev Quiz 3</string>
    <string name="mainMenuTitle">App Dev Quiz</string>
    <string name="mainMenuStart">START</string>
    <string name="editTextName"></string>

    Quiz UI Strings
    <string name="definitionUI">Definition</string>
    <string name="firstAnswerBtn">A</string>
    <string name="secondAnswerBtn">B</string>
    <string name="thirdAnswerBtn">C</string>
    <string name="fourthAnswerBtn">D</string>

    <string name="restart">Play Again</string>

</resources>
