<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.w0299104.quizbuilder.QuizActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textViewDefinition"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/holo_purple"
        android:gravity="center"
        android:text="@string/definitionUI"
        android:textSize="30sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnAnswer1"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="26dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/btnAnswer1"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/firstAnswerBtn"
        android:textColor="@android:color/background_dark"
        android:textSize="50sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnAnswer2"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="23dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/btnAnswer2"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/secondAnswerBtn"
        android:textColor="@android:color/background_dark"
        android:textSize="50sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnAnswer4"
        app:layout_constraintRight_toRightOf="@+id/btnAnswer1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="22dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnAnswer1" />

    <Button
        android:id="@+id/btnAnswer3"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/fourthAnswerBtn"
        android:textColor="@android:color/background_dark"
        android:textSize="50sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/btnAnswer4"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="27dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnAnswer4"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btnAnswer4"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/thirdAnswerBtn"
        android:textColor="@android:color/background_dark"
        android:textSize="50sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnAnswer3"
        app:layout_constraintRight_toRightOf="@+id/btnAnswer2"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="19dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnAnswer2" />

</android.support.constraint.ConstraintLayout>
